--- a/analysis.org
+++ b/analysis.org
@@ -1577,28 +1577,30 @@ Functions to compute frequency of allele 0
       #+end_src
 
       #+tblname: impute2 cluster jobs
-      |  1 |     |
-      |  2 |     |
-      |  3 |     |
-      |  4 |     |
-      |  5 |     |
-      |  6 |     |
-      |  7 |     |
-      |  8 |     |
-      |  9 |     |
-      | 10 |     |
-      | 11 | 3/4 |
-      | 12 | 3/4 |
-      | 13 |   2 |
-      | 14 |   2 |
-      | 15 |   2 |
-      | 16 |   2 |
-      | 17 |   4 |
-      | 18 |   3 |
-      | 19 |   4 |
-      | 20 |   2 |
-      | 21 |   4 |
-      | 22 |   3 |
+      | chrom | jobs | phased | garrett |
+      |-------+------+--------+---------|
+      |     1 |      |        |         |
+      |     2 |      |        |         |
+      |     3 |      |        |         |
+      |     4 |      |        |         |
+      |     5 |      |        |         |
+      |     6 |      |        |         |
+      |     7 |      |        |         |
+      |     8 |      |        |         |
+      |     9 |      |        |         |
+      |    10 |    4 |        |         |
+      |    11 |  3/4 |        |         |
+      |    12 |  3/4 |        |         |
+      |    13 |    2 |        |         |
+      |    14 |    2 |        |         |
+      |    15 |    2 |        |         |
+      |    16 |    2 |        |         |
+      |    17 |    4 | yes    |         |
+      |    18 |    3 |        |         |
+      |    19 |    4 | yes    |         |
+      |    20 |    2 |        |         |
+      |    21 |    4 | yes    |         |
+      |    22 |    3 | yes    |         |
 
       #+srcname: chrom-nchunks
       #+begin_src sh :var pop="Belgium"
@@ -1655,16 +1657,16 @@ Functions to compute frequency of allele 0
     |     8 |       0 |       0 |      0 |       0 |       0 |     0 |      0 |      0 |     0 |      0 |  0 |
     |     9 |       0 |       0 |      0 |       0 |       0 |     0 |      0 |      0 |     0 |      0 |  0 |
     |    10 |       0 |       0 |      0 |       0 |       0 |     0 |      0 |      0 |     0 |      0 |  0 |
-    |    11 |      14 |      15 |     35 |       0 |      45 |     5 |      0 |     45 |    45 |      0 |  0 |
-    |    12 |      14 |      23 |     24 |       0 |      23 |     1 |      0 |     25 |    21 |      0 |  0 |
-    |    13 |      35 |      35 |     35 |       1 |      35 |     4 |      4 |     35 |    35 |      0 |  0 |
-    |    14 |       3 |      13 |      3 |       0 |      31 |     0 |      0 |     10 |    29 |      0 |  0 |
-    |    15 |       0 |       0 |      0 |       0 |       0 |     0 |      0 |      0 |     0 |      0 |  0 |
+    |    11 |      15 |      15 |     35 |      45 |      45 |    45 |     45 |     45 |    45 |     45 |  0 |
+    |    12 |      15 |      23 |     24 |      19 |      23 |    33 |     41 |     25 |    22 |      6 |  0 |
+    |    13 |      35 |      35 |     35 |      12 |      35 |    20 |     14 |     35 |    35 |      3 |  0 |
+    |    14 |      17 |      21 |     11 |       3 |      31 |     4 |      3 |     19 |    30 |      1 |  0 |
+    |    15 |       5 |      19 |      0 |       0 |      22 |     0 |      0 |      0 |     0 |      0 |  0 |
     |    16 |       0 |       0 |      0 |       0 |       0 |     0 |      0 |      0 |     0 |      0 |  0 |
     |    17 |      24 |      24 |     24 |      24 |      24 |    24 |     24 |     24 |    24 |     24 | 24 |
-    |    18 |      28 |      28 |     28 |      28 |      28 |    28 |     28 |     28 |    28 |     28 | 16 |
+    |    18 |      28 |      28 |     28 |      28 |      28 |    28 |     28 |     28 |    28 |     28 | 27 |
     |    19 |      16 |      16 |     16 |      16 |      16 |    16 |     16 |     16 |    16 |     16 | 16 |
-    |    20 |      24 |      24 |     24 |      20 |      24 |    24 |     22 |     24 |    24 |      3 |  0 |
+    |    20 |      24 |      24 |     24 |      22 |      24 |    24 |     22 |     24 |    24 |     10 |  1 |
     |    21 |      14 |      14 |     14 |      14 |      14 |    14 |     14 |     14 |    14 |     14 | 14 |
     |    22 |      14 |      14 |     14 |      14 |      14 |    14 |     14 |     14 |    14 |     14 | 14 |
 
